Related: tdf#99312, add specialized interaction handler

Needed to manage https certificates and authentication whenever
needed.

Change-Id: If20b85a9b349b203a8c46d453afa823629d114cb