filter/CppunitTest_filter_eps_test.mk
@@ -35,6 +35,7 @@ $(eval $(call gb_CppunitTest_use_components,filter_eps_test,\
     i18npool/util/i18npool \
     ucb/source/core/ucb1 \
     ucb/source/ucp/file/ucpfile1 \
+	uui/util/uui \
 ))
 
 $(eval $(call gb_CppunitTest_use_configuration,filter_eps_test))
